2004-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-wired.el (shimbun-wired-from-address): Make it
	uneachable.
	(shimbun-wired-x-face-alist): Replace it with a new face.
	(shimbun-get-group-header-alist): Improve the uniqueness of
	Message-IDs; change the From header appearance.

2004-10-21  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-wired.el (shimbun-wired-url): Update it so that it
	may fit to the new configuration of the Hotwired Japan.
	(shimbun-wired-content-start): Ditto.
	(shimbun-get-group-header-alist): Ditto.

2004-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-touch-file): Protect against the absence of
	file-name-coding-system and default-file-name-coding-system.

2004-10-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-buffer-setup): Modify
	`mode-line-buffer-identification'; display "Loading..." instead of
	`w3m-current-titile' when process of w3m active.

2004-10-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-touch-file): Use `set-file-times' if available;
	bind `coding-system-for-write' while calling `w3m-touch-command'.

2004-10-10  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-laut-de.el: New file.

2004-10-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-perldoc.el (w3m-perldoc-input-coding-system)
	(w3m-perldoc-output-coding-system): New options.
	(w3m-about-perldoc): Use the above options, to display both
	modules encoded in EUC-JP and ones encoded in UTF-8 correctly.

2004-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line): Replace "%" with "%%" in
	w3m-tab-line-format.

2004-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve): Add autoload cookie.

2004-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Don't escape
	Japanese parenthesis (it is not supported by old Emacsen).

2004-10-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-engine-alist): Add the parameter