@@ -1,3 +1,7 @@
+2004-10-25  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-check-refresh-attribute): Fix to Analyze META tags.
+
 2004-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-wired.el (shimbun-wired-from-address): Make it
